--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,13 +12,14 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yorieter #로컬DB url
+    url: jdbc:mysql://127.0.0.1:3306/yorieterlocal #로컬DB url
     username: root #로컬DB username
-    password: 1234 #로컬DB password
+    password: root #로컬DB password
