--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -12,7 +12,7 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
@@ -21,6 +21,6 @@ spring:
 # 배포후 환경변수 설정할 것
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://yorieterdb.c9i6ics8mkd0.ap-northeast-2.rds.amazonaws.com/
-    username: root
-    password: yori1234!
+    url: ${PDB_URL}
+    username: ${PDB_USER}
+    password: ${PDB_PASSWORD}
