--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   # settings for profile
   profiles:
-    active: local   # if you want to have the environment of the develop server, then it should be dev not local
+    active: prod   # if you want to have the environment of the develop server, then it should be dev not local
     include: secret
   # settings for multipart data such as image
   servlet:
     multipart:
       max-file-size: 200MB
       max-request-size: 300MB
+
