[fix] bucket환경변수 설정 #17

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -2,7 +2,7 @@
 cloud:
   aws:
     s3:
-      bucket: umc-yorieter
+      bucket: ${BUCKET_NAME}
     region:
       static: ap-northeast-2
     stack:
