[feat] 식재료 칼로리 API 구현(리팩토링 필요) #38

--- a/src/main/resources/application-secret.yml
+++ b/src/main/resources/application-secret.yml
@@ -15,3 +15,7 @@ cloud:
 # echo 'spring-backend-umc-project-security-jwt-secret-key' | base64
 jwt:
   secret: ${JWT_SECRET}
+
+api:
+  service:
+    key: ${SERVICE_KEY}
