--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     active: prod  # if you want to have the environment of the develop server, then it should be dev not local
     include: secret
   # settings for multipart data such as image
-  servlet:
+  d  servlet:
     multipart:
       max-file-size: 200MB
       max-request-size: 300MB
